# games

./: games.opam
.github/workflows/: ci.yml
theory/: dune
theory/Game/: Draw.v  Forces.v  Game.v  Holds.v  NoWorse.v  Player.v  Strategy.v  Win.v
theory/Util/: Dec.v  ListUtil.v
